# MuseScore

./: .gitignore  CMakeLists.txt
bagpipe/: CMakeLists.txt
bagpipe/definitions/: definitions.cpp  definitions.h  definitionselementreader.h  definitionsfilereader.cpp  definitionsfilereader.h  definitionsreader.cpp  definitionsreader.h
bagpipe/gracenotes/: category.cpp  category.h  customduration.cpp  customduration.h  duration.cpp  duration.h  embellishment.cpp  embellishment.h  embellishmentdefinitions.cpp  embellishmentdefinitions.h  gracenote.cpp  gracenote.h  match.cpp  match.h  melodynote.cpp  melodynote.h  noteconstraint.cpp  noteconstraint.h  notedefinition.cpp  notedefinition.h  notedefinitionmap.cpp  notedefinitionmap.h  sequence.cpp  sequence.h  tags.cpp  tags.h
bagpipe/ms/: elementreader.h  filereader.cpp  filereader.h  logging.cpp  logging.h
bagpipe/ui/: durationsmodifier.cpp  durationsmodifier.h  scoremaker.cpp  scoremaker.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
libmscore/: score.h
manual/: genManual.cpp
manual/output-temp/: accidental.html  barline.html  chord.html  chordrest.html  clef.html  cursor.html  durationelement.html  dynamic.html  element.html  excerpt.html  figuredbass.html  figuredbassitem.html  fileio.html  fretdiagram.html  hairpin.html  harmony.html  jump.html  keysig.html  layoutbreak.html  ledgerline.html  letring.html  letringsegment.html  marker.html  measure.html  measurebase.html  musescore.html  note.html  noteline.html  ottava.html  ottavasegment.html  page.html  palmmute.html  palmmutesegment.html  part.html  pedalsegment.html  plugins.html  rest.html  score.html  scoreview.html  segment.html  (+16 more)
mscore/: CMakeLists.txt  bagpipeassistant.cpp  bagpipeassistant.h  bagpipeassistant.ui  bagpipedurations.cpp  bagpipedurations.h  bagpipepanel.cpp  bagpipepanel.h  bagpipepanel.ui  jackaudio.cpp  musescore.cpp  musescore.h  osc.cpp  pluginCreator.ui  scoreaccessibility.cpp  scoreview.cpp  scoreview.h  shortcut.cpp
mtest/: CMakeLists.txt
share/styles/: CMakeLists.txt  bagpipeDefinitions.xml
